data/all_generated_tests/raw_wast_tests/br_if_UnreachableCodeExecution_1529.wast
;; 10. **Test Invalid Forward Branch**: An invalid `br_if` in a `block` referring to a non-existent label causing an `unreachable`. Checks for bounds on label indices and ensuring such errors do not push the control flow to `unreachable`.  This list of tests is designed to thoroughly check various edge cases of the `br_if` handling in the context of label-dependent control flow redirections, ensuring accurate compliance with the stack transformations and label referencing stipulated by the WASM specification.

(assert_invalid
  (module
    (func $invalid-forward-branch 
      (block 
        (br_if 2 (i32.const 1))
      )
    )
  )
  "unknown label"
)